增加kafka示例代码、改造model以支持事务传播、增加是否开发环境检测函数

--- a/configs/config.toml.example
+++ b/configs/config.toml.example
@@ -19,6 +19,11 @@ max_idle = 10
 max_active = 0
 idle_timeout = 180
 
+[kafka]
+brokers = ["kafka1:9092"]
+topic = "bossfi-indexer"
+group_id = "bossfi-group"
+
 [[chains]]
 name = "sepolia"
 chain_id = 11155111
